turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:14: error: illegal start of simple expression
var rule:Array[Array[Array[Int]]] = [[[1,'R',0],[0,'N',0]],[[1,'R',1],[0,'N',1]]] // Change this
                                    ^